--- a/src/balance_bot_controller/CMakeLists.txt
+++ b/src/balance_bot_controller/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 
-install (DIRECTORY config
+install (DIRECTORY launch config
 DESTINATION share/${PROJECT_NAME})
 
 
