--- a/src/balance_bot_description/CMakeLists.txt
+++ b/src/balance_bot_description/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 
-install (DIRECTORY launch urdf worlds
+install (DIRECTORY urdf worlds
   DESTINATION share/${PROJECT_NAME}
 )
 
