--- a/src/balance_bot_bringup/config/gazebo_bridge.yaml
+++ b/src/balance_bot_bringup/config/gazebo_bridge.yaml
@@ -5,8 +5,8 @@
   direction: GZ_TO_ROS
 
 ## IMU
-# - ros_topic_name: "imu"
-#   gz_topic_name: "imu"
-#   ros_type_name: "sensor_msgs/msg/Imu"
-#   gz_type_name: "gz.msgs.IMU"
-#   direction: GZ_TO_ROS
+- ros_topic_name: "imu"
+  gz_topic_name: "imu"
+  ros_type_name: "sensor_msgs/msg/Imu"
+  gz_type_name: "gz.msgs.IMU"
+  direction: GZ_TO_ROS
