Added balance_controller node

--- a/src/balance_bot_controller/CMakeLists.txt
+++ b/src/balance_bot_controller/CMakeLists.txt
@@ -6,10 +6,18 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+ament_python_install_package(${PROJECT_NAME})
+
 
 install (DIRECTORY launch config
 DESTINATION share/${PROJECT_NAME})
 
+install (PROGRAMS
+${PROJECT_NAME}/balance_controller.py
+DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
