--- a/src/balance_bot_controller/CMakeLists.txt
+++ b/src/balance_bot_controller/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(rcl_interfaces REQUIRED)
 ament_python_install_package(${PROJECT_NAME})
 
 
