New velocity controller build

--- a/src/balance_bot_controller/CMakeLists.txt
+++ b/src/balance_bot_controller/CMakeLists.txt
@@ -18,6 +18,8 @@ DESTINATION share/${PROJECT_NAME})
 
 install (PROGRAMS
 ${PROJECT_NAME}/balance_controller.py
+${PROJECT_NAME}/velocity_controller.py
+
 DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
